--- a/Summer.ipynb
+++ b/Summer.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tjURneBnDoMs",
-        "outputId": "628d6da0-9eeb-4965-833e-cabf6e008a55"
+        "outputId": "663603db-2821-4122-f1da-507a7bbf720a"
       },
       "source": [
         "import warnings\n",
@@ -64,7 +64,7 @@
         "\n",
         "# 22"
       ],
-      "execution_count": 33,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,13 +92,13 @@
           "height": 419
         },
         "id": "n-UX-X9lDoMs",
-        "outputId": "3687b515-e9ef-474f-90b4-800873156563"
+        "outputId": "6736391d-6ae5-44b1-9f96-a273ab79c8c6"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "data = df[df['Medal'] == 'Gold']['Sport'].groupby(df['Sport']).count().sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Sport')\n",
         "plt.ylabel('Gold Medals')\n",
@@ -108,19 +108,19 @@
         "\n",
         "# Aquatics"
       ],
-      "execution_count": 34,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sport\n",
-            "Aquatics      1421\n",
-            "Athletics     1215\n",
-            "Rowing         890\n",
-            "Gymnastics     820\n",
-            "Fencing        552\n",
-            "Name: Sport, dtype: int64\n"
+            "            Sport\n",
+            "Sport            \n",
+            "Aquatics     1421\n",
+            "Athletics    1215\n",
+            "Rowing        890\n",
+            "Gymnastics    820\n",
+            "Fencing       552\n"
           ]
         },
         {
@@ -161,11 +161,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "1631a5f8-4042-4ca0-832f-9542ed1a3bd1"
+        "outputId": "cd56c198-efd7-4f00-a04b-429cede3d922"
       },
       "source": [
         "data = df['Medal'].groupby(df['Sport']).count().sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Sport')\n",
         "plt.ylabel('Medals')\n",
@@ -175,19 +175,19 @@
         "\n",
         "# Aquatics"
       ],
-      "execution_count": 35,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sport\n",
-            "Aquatics      4170\n",
-            "Athletics     3638\n",
-            "Rowing        2667\n",
-            "Gymnastics    2307\n",
-            "Fencing       1613\n",
-            "Name: Medal, dtype: int64\n"
+            "            Medal\n",
+            "Sport            \n",
+            "Aquatics     4170\n",
+            "Athletics    3638\n",
+            "Rowing       2667\n",
+            "Gymnastics   2307\n",
+            "Fencing      1613\n"
           ]
         },
         {
@@ -228,11 +228,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 499
         },
-        "outputId": "01edd9c2-be8d-4c4c-97b5-ad3560a07285"
+        "outputId": "a2f10e19-3927-4215-ead7-1172604c8df9"
       },
       "source": [
         "data = df['Medal'].groupby(df['Athlete']).count().sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Player')\n",
         "plt.ylabel('Medals')\n",
@@ -243,19 +243,19 @@
         "\n",
         "# PHELPS, Michael"
       ],
-      "execution_count": 36,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Athlete\n",
-            "PHELPS, Michael         22\n",
-            "LATYNINA, Larisa        18\n",
-            "ANDRIANOV, Nikolay      15\n",
-            "MANGIAROTTI, Edoardo    13\n",
-            "SHAKHLIN, Boris         13\n",
-            "Name: Medal, dtype: int64\n"
+            "                      Medal\n",
+            "Athlete                    \n",
+            "PHELPS, Michael          22\n",
+            "LATYNINA, Larisa         18\n",
+            "ANDRIANOV, Nikolay       15\n",
+            "MANGIAROTTI, Edoardo     13\n",
+            "SHAKHLIN, Boris          13\n"
           ]
         },
         {
@@ -296,11 +296,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 476
         },
-        "outputId": "b72c65dc-bd0f-49fa-abdf-248da8509fed"
+        "outputId": "d06f5728-da2a-448d-8e58-b4f8b02f153b"
       },
       "source": [
         "data = df[df['Medal'] == 'Gold']['Athlete'].groupby(df['Athlete']).count().sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Player')\n",
         "plt.ylabel('Gold Medals')\n",
@@ -311,19 +311,19 @@
         "\n",
         "# PHELPS, Michael"
       ],
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Athlete\n",
-            "PHELPS, Michael     18\n",
-            "NURMI, Paavo         9\n",
-            "SPITZ, Mark          9\n",
-            "LEWIS, Carl          9\n",
-            "LATYNINA, Larisa     9\n",
-            "Name: Athlete, dtype: int64\n"
+            "                  Athlete\n",
+            "Athlete                  \n",
+            "PHELPS, Michael        18\n",
+            "NURMI, Paavo            9\n",
+            "SPITZ, Mark             9\n",
+            "LEWIS, Carl             9\n",
+            "LATYNINA, Larisa        9\n"
           ]
         },
         {
@@ -363,7 +363,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3338dcd9-d717-432d-f7d6-1d0f1b8e9958"
+        "outputId": "e395ad66-576b-401c-d54c-ce122664286e"
       },
       "source": [
         "data = df.sort_values(by='Year')[df['Country'] == \"IND\"][df['Medal'] == 'Gold'].head()\n",
@@ -371,7 +371,7 @@
         "\n",
         "# 1928"
       ],
-      "execution_count": 38,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,11 +399,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 506
         },
-        "outputId": "eb89dc4d-dabe-43ac-9697-26c0b5758b2b"
+        "outputId": "67bb14bd-45ac-4b5b-e3eb-db390469d011"
       },
       "source": [
         "data = df.groupby('Event').nunique()['Athlete'].sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Event')\n",
         "plt.ylabel('No. of Players')\n",
@@ -414,19 +414,19 @@
         "\n",
         "# Football"
       ],
-      "execution_count": 39,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Event\n",
-            "Football                    1357\n",
-            "Hockey                      1154\n",
-            "Team Competition             975\n",
-            "Eight With Coxswain (8+)     828\n",
-            "Basketball                   814\n",
-            "Name: Athlete, dtype: int64\n"
+            "                          Athlete\n",
+            "Event                            \n",
+            "Football                     1357\n",
+            "Hockey                       1154\n",
+            "Team Competition              975\n",
+            "Eight With Coxswain (8+)      828\n",
+            "Basketball                    814\n"
           ]
         },
         {
@@ -467,11 +467,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "a49aa66d-be7d-477b-d47d-f4a82dee5e83"
+        "outputId": "86b4234a-577f-43be-b9b9-a364c8421f64"
       },
       "source": [
         "data = df[df['Gender'] == 'Women'][df['Medal'] == 'Gold'].groupby('Sport').nunique()['Athlete'].sort_values(ascending=False).head()\n",
-        "print(data)\n",
+        "print(pd.DataFrame(data))\n",
         "plt.scatter(data.keys(), data.values)\n",
         "plt.xlabel('Sport')\n",
         "plt.ylabel('Gold Medalists')\n",
@@ -481,19 +481,19 @@
         "\n",
         "# Aquatics"
       ],
-      "execution_count": 41,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sport\n",
-            "Aquatics      385\n",
-            "Athletics     306\n",
-            "Gymnastics    188\n",
-            "Rowing        157\n",
-            "Volleyball    132\n",
-            "Name: Athlete, dtype: int64\n"
+            "            Athlete\n",
+            "Sport              \n",
+            "Aquatics        385\n",
+            "Athletics       306\n",
+            "Gymnastics      188\n",
+            "Rowing          157\n",
+            "Volleyball      132\n"
           ]
         },
         {
